# info2-tele

./: .gitignore  CMakeLists.txt  mainRaylib.c
Guia1/: main1.c  main2.c  main4.c  main6.c  main7-2.c  main7.c
Guia2/: ej11.c  ej16.c  ej6.c  ej7.c  ej9.c  ejemplo1.c  ejemplo2.c  ejemplo3.c
Guia4/: ej1.c  ej4.c
ej_raylib/: mainRaylib.c
test/: test1.c
